make load more button only visible for 9 or more events make load more button position fixed use the getderivedstatefrom props to replace component will receive props

--- a/client/assets/pages/_events-page.scss
+++ b/client/assets/pages/_events-page.scss
@@ -29,7 +29,7 @@
   }
   &__footer {
     grid-column: event-gallery-start/event-gallery-end;
-    height: 100%;
+    height: 80%;
     width: 100%;
     margin-top: rem(29.69px);
     display: flex;
